[gd_scene load_steps=3 format=3 uid="uid://cwg5ng5gboi4d"]

[ext_resource type="Script" uid="uid://dbf5oitactqfo" path="res://scripts/damagezone.gd" id="1_ppofr"]
[ext_resource type="AudioStream" uid="uid://ckwjxj32eclm7" path="res://sounds/hurt.wav" id="2_0k1nd"]

[node name="damage_zone" type="Area2D"]
script = ExtResource("1_ppofr")

[node name="damage_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_0k1nd")

[node name="death_timer" type="Timer" parent="."]

[node name="cooldown" type="Timer" parent="."]
wait_time = 1.579

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
